cloudformation/web-server-stack.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Template to create a vpc with a webserver
Resources: 
  webServerVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
      - Key: Name
        Value: our-vpc
  publicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: webServerVpc
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: "eu-central-1a"
      Tags:
      - Key: Name
        Value: public-subnet
  publicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: webServerVpc
      Tags:
      - Key: Name
        Value: public-route-table
  publicSubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: publicSubnet
      RouteTableId:
        Ref: publicRouteTable
  igw:
    Type: AWS::EC2::InternetGateway
  AttachIgw:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: webServerVpc
      InternetGatewayId:
        Ref: igw
  routeToIgw:
    Type: AWS::EC2::Route
    DependsOn: igw
    Properties:
       RouteTableId:
         Ref: publicRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: igw
  webServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow to access server over http
      VpcId: 
        Ref: webServerVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
  webServer: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-09439f09c55136ecf
      InstanceType: t2.micro
      NetworkInterfaces: 
      - AssociatePublicIpAddress: true
        DeviceIndex: 0
        GroupSet: 
          - Ref: webServerSecurityGroup
        SubnetId: 
          Ref: publicSubnet
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            # Install Apache Web Server and PHP
            yum install -y httpd mysql php
            # Download Lab files
            wget https://aws-tc-largeobjects.s3.amazonaws.com/ILT-TF-100-TUFOUN-1/4-lab-vpc-web-server/lab-app.zip
            unzip lab-app.zip -d /var/www/html/
            # Turn on web server
            chkconfig httpd on
            service httpd start
